--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Page acceuil des tp</title>
 </head>
 <header>
     <a href="tp1.html">tp1</a>
     <a href="tp2.html">tp2</a>
+    <a href="tp3.html">tp3</a>
 </header>
 <body>
 
