--- a/tp1.html
+++ b/tp1.html
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="fr">
     <header>
-        <title>tp1web</title>
+        <title>tp1</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css">
     </header>
     <head>
         <body>
