--- a/tp3.html
+++ b/tp3.html
@@ -23,6 +23,12 @@
                 <th scope="col">Nom</th>
                 <th scope="col">définition</th>
             </tr>
+            <tr>
+                <td>
+                    h1
+                </td>
+                <td>titre principal </td>
+            </tr>
         </thead>
     </table>
 </body>
