--- a/tp3.html
+++ b/tp3.html
@@ -25,9 +25,13 @@
             </tr>
             <tr>
                 <td>
-                    h1
+                    h1,h2,h3,h4,h5,h6
                 </td>
-                <td>titre principal </td>
+                <td>titres</td>
+            </tr>
+            <tr>
+                <td>body</td>
+                <td>corps de la page</td>
             </tr>
         </thead>
     </table>
