--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Page acceuil des tp</title>
+    <title>Document</title>
 </head>
-<header>
-    <a href="tp1.html">tp1</a>
-    <a href="tp2.html">tp2</a>
-    <a href="tp3.html">tp3</a>
-</header>
-<body>
-
+<body>  
+    <div class="tp">
+            <nav>
+                <h3>lien vers tp</h3>
+                <ul>
+                    <li><a href="tp3/tp3.html">tp3</a></li>
+                    <li><a href="tp4/acceuiltp4.html">tp4</a></li>
 </body>
 </html>
