--- a/tp3/tp3.html
+++ b/tp3/tp3.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
         <script
@@ -18,9 +18,8 @@
             <div class="tp">
                 <nav>
                     <ul>
-                        <li><a href="index.html">page acceuil des tp</a></li>
-                        <li><a href="tp3/tp3.html">tp3</a></li>
-                        <li><a href="tp4/tp4.html">tp4</a></li>
+                        <li><a href="../index.html">page acceuil des tp</a></li>
+                        <li><a href="../tp4/tp4.html">tp4</a></li>
                     </ul>
                 </nav>
             </div>
