--- a/tp4/acceuiltp4.html
+++ b/tp4/acceuiltp4.html
@@ -23,7 +23,7 @@
         <div class="tp">
             <nav>
                 <ul>
-                    <li><a href="tp3/tp3.html">tp3</a></li>
+                    <li><a href="../tp3/tp3.html">tp3</a></li>
                     <li><a href="tp4/tp4.html">tp4</a></li>
                 </ul>
             </nav>
