Fix: structure du tableau TP3 (thead/tbody, 3 colonnes, exemple)

--- a/tp3/tp3.html
+++ b/tp3/tp3.html
@@ -34,41 +34,40 @@
                     <th scope="col">définition</th>
                     <th scope="col">exemple</th>
                 </tr>
+            </thead>
+            <tbody>
                 <tr>
-                    <td>
-                        h1,h2,h3,h4,h5,h6
-                    </td>
+                    <td>h1,h2,h3,h4,h5,h6</td>
                     <td>titres</td>
-                </tr>
-                <tr>
-                    <td>body</td>
-                    <td>corps de la page</td>
-
-                    <td>titre principal </td>
-                    <td
-                        class="exemple"><pre><code class="language-html">&lt;h1&gt;ceci est un H1&lt;/h1&gt;</code></pre>
+                    <td class="exemple">
+                        <pre><code class="language-html">&lt;h1&gt;ceci est un H1&lt;/h1&gt;</code></pre>
                         <div class="apercu">
                             <h1>ceci est un H1</h1>
                         </div>
                     </td>
                 </tr>
                 <tr>
+                    <td>body</td>
+                    <td>corps de la page</td>
+                    <td class="exemple">
+                        <pre><code class="language-html">&lt;body&gt;contenu&lt;/body&gt;</code></pre>
+                        <div class="apercu">
+                            <strong>Contenu du corps de page</strong>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
                     <td>a</td>
                     <td>crée un lien vers une autre page</td>
-                    <td
-                        class="exemple"><pre><code class="language-html">&lt;a href="https://www.google.fr"&gt;ceci est un a&lt;/a&gt;</code></pre>
+                    <td class="exemple">
+                        <pre><code class="language-html">&lt;a href="https://www.google.fr"&gt;lien&lt;/a&gt;</code></pre>
                         <div class="apercu">
                             <a href="https://www.google.fr">ceci est un lien
                                 vers google</a>
                         </div>
                     </td>
                 </tr>
-                <tr>
-                    <td>
-
-                    </td>
-                </tr>
-            </thead>
+            </tbody>
         </table>
     </body>
 </html>
