--- a/tp3/tp3.html
+++ b/tp3/tp3.html
@@ -43,16 +43,22 @@
                         <pre><code class="language-html">&lt;h1&gt;ceci est un H1&lt;/h1&gt;</code></pre>
                         <div class="apercu">
                             <h1>ceci est un H1</h1>
+                            <br><h2>ceci est un h2</h2>
+                            <br><h3>ceci est un h3</h3>
+                            <br><h4>ceci est un h4</h4>
+                            <br><h5>ceci est un h5</h5>
+                            <br><h6>ceci est un h6</h6>
                         </div>
                     </td>
                 </tr>
                 <tr>
-                    <td>body</td>
-                    <td>corps de la page</td>
+                    <td>article</td>
+                    <td>représente un texte indépendant, une portion de contenu, 
+                        comme par exemple un article de journal, de blog ou de forum.</td>
                     <td class="exemple">
-                        <pre><code class="language-html">&lt;body&gt;contenu&lt;/body&gt;</code></pre>
+                        <pre><code class="language-html">&lt;article&gt;contenu&lt;/article&gt;</code></pre>
                         <div class="apercu">
-                            <strong>Contenu du corps de page</strong>
+                            <article>texte indépendant</article>
                         </div>
                     </td>
                 </tr>
@@ -65,6 +71,43 @@
                             <a href="https://www.google.fr">ceci est un lien
                                 vers google</a>
                         </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        aside
+                    </td>
+                    <td>L'élément aside est destiné au contenu tangentiel, une sorte de bonus au contenu principal,
+                         que ce soit pour un article ou l'ensemble d'un document HTML.</td>
+                    <td class="exemple">
+                        <pre><code class="language-html">&lt;aside&gt;aside&lt;/aside&gt;</code></pre>
+                        <div class="apercu"><aside>ceci est un contenu tangentiel</aside></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        input
+                    </td>
+                    <td>
+                        permet à utilisateur de saisir une valeur
+                        datetime, datetime-local, date, month , week, time, number, 
+                        range, email, url, search, color
+                    </td>
+                    <td class="exemple">
+                        <pre><code class="language-html">&lt;input type="type à définir"&gt;valeur à saisir&lt;/input&gt;</code></pre>
+                        <div class="apercu"><input type="text"></div>
+                    </td>
+                </tr>
+                 <tr>
+                    <td>
+                        
+                    </td>
+                    <td>
+                        
+                    </td>
+                    <td class="exemple">
+                        <pre><code class="language-html">&lt;&gt;&lt;/&gt;</code></pre>
+                        <div class="apercu"><aside></aside></div>
                     </td>
                 </tr>
             </tbody>
