Zebra table: scope with .zebra + enforce cell backgrounds to match GitHub and local

--- a/tp3/tp3.html
+++ b/tp3/tp3.html
@@ -24,7 +24,7 @@
                 </nav>
             </div>
         </header>
-        <table>
+    <table class="zebra">
             <caption>
                 liste balise html
             </caption>
