ajout dark mode

--- a/tp3/tp3.html
+++ b/tp3/tp3.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css?v=20260202">
+        <script src="../script.js" defer></script>
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
         <script
@@ -15,11 +16,12 @@
     </head>
     <body>
         <header>
+            <button type="button" onclick="darkFunction()" class="darkmode_button"></button>
             <div class="tp">
                 <nav>
                     <ul>
                         <li><a href="../index.html">page acceuil des tp</a></li>
-                        <li><a href="../tp4/tp4.html">tp4</a></li>
+                        <li><a href="../tp4/acceuiltp4.html">tp4</a></li>
                     </ul>
                 </nav>
             </div>
