--- a/tp4/acceuiltp4.html
+++ b/tp4/acceuiltp4.html
@@ -4,10 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../style.css">
+        <script src="../script.js" defer></script>
         <title>Page acceuil tp 4</title>
     </head>
     <body>
         <header>
+            <button type="button" onclick="darkFunction()" class="darkmode_button"></button>
             <h1>Page acceuil tp 4</h1>
             <div class="image">
                 <img src="img/html.png" alt="html">
