--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <title>Document</title>
 </head>
-<body>  
+<body>
+    <header>
+        <button type="button" onclick="darkFunction()" class="darkmode_button"></button>
+    </header>
     <div class="tp">
             <nav>
                 <h3>lien vers tp</h3>
