--- a/tp4/tp4.html
+++ b/tp4/tp4.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
+        <script src="../script.js" defer></script>
         <title>tp4</title>
     </head>
     <body>
         <header>
-
+            <button type="button" onclick="darkFunction()" class="darkmode_button"></button>
         </header>
     </body>
 </html>
