correction redirection lien et darkmode

--- a/tp4/acceuiltp4.html
+++ b/tp4/acceuiltp4.html
@@ -4,17 +4,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="style/tp4style.css">
         <script src="../script.js" defer></script>
         <title>Page acceuil tp 4</title>
     </head>
     <body>
         <header>
-            <button type="button" onclick="darkFunction()" class="darkmode_button"></button>
+            <button type="button" onclick="darkFunction()" class="darkmode_button" ></button>
             <h1>Page acceuil tp 4</h1>
             <div class="image">
-                <img src="img/html.png" alt="html">
-                <img src="img/css.png" alt="css">
-                <img src="img/js.png" alt="js">
+                <img src="img/html.png" alt="html" style="max-width:100%;height:auto;">
+                <img src="img/css.png" alt="css" style="max-width:100%;height:auto;">
+                <img src="img/js.png" alt="js" style="max-width:100%;height:auto;">
             </div>
             <div class="cours">
                 <nav>
@@ -25,10 +26,12 @@
         <div class="tp">
             <nav>
                 <ul>
-                    <li><a href="../tp3/tp3.html">tp3</a></li>
-                    <li><a href="tp4/tp4.html">tp4</a></li>
+                    <button>href="../tp3/tp3.html">tp3</button>
+                    <li><a href="tp4.html">tp4</a></li>
+                    <li><a href="../index.html">page acceuil des tp</a></li>
                 </ul>
             </nav>
         </div>
+        
     </body>
 </html>
