--- a/tp4/tp4.html
+++ b/tp4/tp4.html
@@ -10,6 +10,16 @@
     <body>
         <header>
             <button type="button" onclick="darkFunction()" class="darkmode_button"></button>
+            <div class="tp">
+                <nav>
+                    <ul>
+                        <li><a href="../index.html">page acceuil des tp</a></li>
+                        <li><a href="acceuiltp4.html">acceuil tp4</a></li>
+                        <li><a href="../tp3/tp3.html">tp 3</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
+        
     </body>
 </html>
