--- a/tp4/acceuiltp4.html
+++ b/tp4/acceuiltp4.html
@@ -26,7 +26,7 @@
         <div class="tp">
             <nav>
                 <ul>
-                    <button>href="../tp3/tp3.html">tp3</button>
+                    <button href="../tp3/tp3.html">tp3>tp3</button>
                     <li><a href="tp4.html">tp4</a></li>
                     <li><a href="../index.html">page acceuil des tp</a></li>
                 </ul>
