mise à jour style liste tp

--- a/tp4/acceuiltp4.html
+++ b/tp4/acceuiltp4.html
@@ -24,10 +24,11 @@
             </div>
         </header>
         <div class="tp">
+            <h3>liste des tp</h3>
             <nav>
                 <ul>
-                    <button href="../tp3/tp3.html">tp3>tp3</button>
-                    <li><a href="tp4.html">tp4</a></li>
+                    <li><a href="../tp3/tp3.html">tp3</a></li><br>
+                    <li><a href="tp4.html">tp4</a></li><br>
                     <li><a href="../index.html">page acceuil des tp</a></li>
                 </ul>
             </nav>
