--- a/tp4/acceuiltp4.html
+++ b/tp4/acceuiltp4.html
@@ -20,16 +20,27 @@
             <div class="cours">
                 <nav>
                     <h3>descriptif des cours</h3>
+                    <p><strong>
+                        <br>TP3:
+                        <br>UTILISATION DES BALISES HTML "CONTENEURS TEXTE"
+                        <br>TP4:Dans ce TP, nous allons mettre en place différentes pages web en lien entre elle pour apprendre à effectuer des liens hypertextes
+                        en HTML
+                        <br>TP5: UTILISATION DES BALISES : TABLEAU, IMAGE ET LIEN
+                    </strong></p>
                 </nav>
             </div>
         </header>
         <div class="tp">
-            <h3>liste des tp</h3>
+            <h3>liste des tp et cours </h3>
             <nav>
                 <ul>
-                    <li><a href="../tp3/tp3.html">tp3</a></li><br>
-                    <li><a href="tp4.html">tp4</a></li><br>
+                    <li><a href="../tp3/tp3.html">tp3</a></li>
+                    <li><a href="https://aura-26.elea.apps.education.fr/pluginfile.php/70402/mod_resource/content/3/TP3-HTML-CSS.pdf">cours tp3</a></li>
+                    <li><a href="tp4.html">tp4</a></li>
+                    <li><a href="https://aura-26.elea.apps.education.fr/pluginfile.php/112936/mod_resource/content/0/TP4-Lien.pdf"> cour tp 4</a></li>
                     <li><a href="../index.html">page acceuil des tp</a></li>
+                    <li><a href="../tp5.html">tp5</a></li>
+                    <li><a href="https://aura-26.elea.apps.education.fr/pluginfile.php/71956/mod_resource/content/1/TP6-les%20tableaux.pdf">cours tp 5</a></li>
                 </ul>
             </nav>
         </div>
