--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
                 <ul>
                     <li><a href="tp3/tp3.html">tp3</a></li>
                     <li><a href="tp4/acceuiltp4.html">tp4</a></li>
+                    <li><a href="tp6/index.html">tp6</a></li>
 </body>
 </html>
