--- a/tp3/tp3.html
+++ b/tp3/tp3.html
@@ -22,6 +22,7 @@
                     <ul>
                         <li><a href="../index.html">page acceuil des tp</a></li>
                         <li><a href="../tp4/acceuiltp4.html">tp4</a></li>
+                        <li><a href="../tp6/tp6.html">tp6</a></li>
                     </ul>
                 </nav>
             </div>
