--- a/tp4/tp4.html
+++ b/tp4/tp4.html
@@ -16,6 +16,7 @@
                         <li><a href="../index.html">page acceuil des tp</a></li>
                         <li><a href="acceuiltp4.html">acceuil tp4</a></li>
                         <li><a href="../tp3/tp3.html">tp 3</a></li>
+                        <li><a href="../tp6/index.html">tp6</a></li>
                     </ul>
                 </nav>
             </div>
