--- a/tp4/acceuiltp4.html
+++ b/tp4/acceuiltp4.html
@@ -41,6 +41,8 @@
                     <li><a href="../index.html">page acceuil des tp</a></li>
                     <li><a href="../tp5.html">tp5</a></li>
                     <li><a href="https://aura-26.elea.apps.education.fr/pluginfile.php/71956/mod_resource/content/1/TP6-les%20tableaux.pdf">cours tp 5</a></li>
+                    <li><a href="../tp6/index.html">tp6</a></li>
+                    <li><a href="https://aura-26.elea.apps.education.fr/pluginfile.php/117136/mod_resource/content/0/TP6-Image.pdf">  cours tp6</a></li>
                 </ul>
             </nav>
         </div>
