--- a/tp6/index.html
+++ b/tp6/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="Style/style.css">
     <script src="../../script.js" defer></script>
     <title>tp6</title>
 </head>
@@ -23,27 +24,107 @@
         </div>
     </header>
     <h1 id="titresansbordure">jeu du mémorie</h1>
-    <div class="carte">
-    <img src="assets/carte1.png" alt="carte">
-    <img src="assets/carte2.png" alt="carte">
-    <img src="assets/carte3.png" alt="carte">
-    <img src="assets/carte4.png" alt="carte">
-    <img src="assets/carte5.png" alt="carte">
-    <img src="assets/carte6.png" alt="carte">
-    <img src="assets/carte7.png" alt="carte">
-    <img src="assets/carte8.png" alt="carte">
-    <img src="assets/carte9.png" alt="carte">
-    <img src="assets/carte10.png" alt="carte">
-    <img src="assets/carte1.png" alt="carte">
-    <img src="assets/carte2.png" alt="carte">
-    <img src="assets/carte3.png" alt="carte">
-    <img src="assets/carte4.png" alt="carte">
-    <img src="assets/carte5.png" alt="carte">
-    <img src="assets/carte6.png" alt="carte">
-    <img src="assets/carte7.png" alt="carte">
-    <img src="assets/carte8.png" alt="carte">
-    <img src="assets/carte9.png" alt="carte">
-    <img src="assets/carte10.png" alt="carte">
-    </div>
+        <div class="carte">
+                    <label class="card">
+                        <input type="checkbox" class="card-toggle" aria-hidden="true">
+                        <img src="assets/carte1.png" alt="carte" tabindex="0">
+                        <span class="card-cover" aria-hidden="true"></span>
+                    </label>
+                    <label class="card">
+                        <input type="checkbox" class="card-toggle" aria-hidden="true">
+                        <img src="assets/carte2.png" alt="carte" tabindex="0">
+                        <span class="card-cover" aria-hidden="true"></span>
+                    </label>
+                    <label class="card">
+                        <input type="checkbox" class="card-toggle" aria-hidden="true">
+                        <img src="assets/carte3.png" alt="carte" tabindex="0">
+                        <span class="card-cover" aria-hidden="true"></span>
+                    </label>
+                    <label class="card">
+                        <input type="checkbox" class="card-toggle" aria-hidden="true">
+                        <img src="assets/carte4.png" alt="carte" tabindex="0">
+                        <span class="card-cover" aria-hidden="true"></span>
+                    </label>
+                    <label class="card">
+                        <input type="checkbox" class="card-toggle" aria-hidden="true">
+                        <img src="assets/carte5.png" alt="carte" tabindex="0">
+                        <span class="card-cover" aria-hidden="true"></span>
+                    </label>
+                    <label class="card">
+                        <input type="checkbox" class="card-toggle" aria-hidden="true">
+                        <img src="assets/carte6.png" alt="carte" tabindex="0">
+                        <span class="card-cover" aria-hidden="true"></span>
+                    </label>
+                    <label class="card">
+                        <input type="checkbox" class="card-toggle" aria-hidden="true">
+                        <img src="assets/carte7.png" alt="carte" tabindex="0">
+                        <span class="card-cover" aria-hidden="true"></span>
+                    </label>
+                    <label class="card">
+                        <input type="checkbox" class="card-toggle" aria-hidden="true">
+                        <img src="assets/carte8.png" alt="carte" tabindex="0">
+                        <span class="card-cover" aria-hidden="true"></span>
+                    </label>
+                    <label class="card">
+                        <input type="checkbox" class="card-toggle" aria-hidden="true">
+                        <img src="assets/carte9.png" alt="carte" tabindex="0">
+                        <span class="card-cover" aria-hidden="true"></span>
+                    </label>
+                    <label class="card">
+                        <input type="checkbox" class="card-toggle" aria-hidden="true">
+                        <img src="assets/carte10.png" alt="carte" tabindex="0">
+                        <span class="card-cover" aria-hidden="true"></span>
+                    </label>
+                    <label class="card">
+                        <input type="checkbox" class="card-toggle" aria-hidden="true">
+                        <img src="assets/carte1.png" alt="carte" tabindex="0">
+                        <span class="card-cover" aria-hidden="true"></span>
+                    </label>
+                    <label class="card">
+                        <input type="checkbox" class="card-toggle" aria-hidden="true">
+                        <img src="assets/carte2.png" alt="carte" tabindex="0">
+                        <span class="card-cover" aria-hidden="true"></span>
+                    </label>
+            <label class="card">
+                <input type="checkbox" class="card-toggle" aria-hidden="true">
+                <img src="assets/carte3.png" alt="carte">
+                <span class="card-cover" aria-hidden="true"></span>
+            </label>
+            <label class="card">
+                <input type="checkbox" class="card-toggle" aria-hidden="true">
+                <img src="assets/carte4.png" alt="carte">
+                <span class="card-cover" aria-hidden="true"></span>
+            </label>
+            <label class="card">
+                <input type="checkbox" class="card-toggle" aria-hidden="true">
+                <img src="assets/carte5.png" alt="carte">
+                <span class="card-cover" aria-hidden="true"></span>
+            </label>
+            <label class="card">
+                <input type="checkbox" class="card-toggle" aria-hidden="true">
+                <img src="assets/carte6.png" alt="carte">
+                <span class="card-cover" aria-hidden="true"></span>
+            </label>
+            <label class="card">
+                <input type="checkbox" class="card-toggle" aria-hidden="true">
+                <img src="assets/carte7.png" alt="carte">
+                <span class="card-cover" aria-hidden="true"></span>
+            </label>
+            <label class="card">
+                <input type="checkbox" class="card-toggle" aria-hidden="true">
+                <img src="assets/carte8.png" alt="carte">
+                <span class="card-cover" aria-hidden="true"></span>
+            </label>
+            <label class="card">
+                <input type="checkbox" class="card-toggle" aria-hidden="true">
+                <img src="assets/carte9.png" alt="carte">
+                <span class="card-cover" aria-hidden="true"></span>
+            </label>
+            <label class="card">
+                <input type="checkbox" class="card-toggle" aria-hidden="true">
+                <img src="assets/carte10.png" alt="carte">
+                <span class="card-cover" aria-hidden="true"></span>
+            </label>
+        </div>
 </body>
 </html>
